# av-shortcuts

./: .gitignore  README.md  av-base.py  pyproject.toml  setup.cfg  setup.py
src/: av-cut.py  av-play.py  av-to-aac.py  av-to-mp3.py  av-to-mp4.py
src/avshortcuts/: __init__.py  application.py  clp.py  cut.py  play.py  settings.py  toaac.py  tomp3.py  tomp4.py
src/avshortcutslib/: __init__.py  application.py  clb.py  clp.py  czlogging.py  czutils.py  datastructs.py  execution.py  logging.py  main.py  settings.py
src/czavsuite/: __init__.py  application.py  clb.py  clp.py  config.py  convert.py  czlogging.py  encoding.py  ffmpeg.py  probing.py  scripts.py  utils.py
