# Copyright (C) 2021 - present  Alexander Czutro <github@czutro.ch>
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# For more details, see the provided licence file or
# <http://www.gnu.org/licenses>.
#
################################################################### aczutro ###

[tool.poetry]
name = "czavsuite"
version = "2.0"
description = "A suite of useful scripts to serialise FFmpeg jobs"
authors = ["Alexander Czutro <github@czutro.ch>"]
homepage = "https://github.com/aczutro/czavsuite"
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python  = "^3.10"
czutils = "^1.4.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
av-probe = "czavsuite:mainProbe"
av-to-mp4 = "czavsuite:mainToMp4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

### aczutro ###################################################################
