# av-shortcuts - FFmpeg wrapper with a simplified command line
#
# Copyright 2020 - present Alexander Czutro, github@czutro.ch
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.
#
################################################################### aczutro ###

[metadata]
name = av-shortcuts
version = 2.0
author = Alexander Czutro
author_email = github@czutro.ch
url = http://alexander.czutro.ch
packager = Alexander Czutro <github@czutro.ch>
description = FFmpeg wrapper with a simplified command line
license = GNU GPL v3

[options]
package_dir = =src
packages = find:

[options.packages.find]
where = src

### aczutro ###################################################################
